--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
@@ -3,60 +3,68 @@
       ng-submit="save()"
       val-form-manager>
 
-    <div class="umb-panel">
-        <div class="umb-panel-body no-header with-footer">
-            <div class="umb-forms-settings">
+	<div class="umb-panel">
+		<div class="umb-panel-body no-header with-footer">
+			<div class="umb-forms-settings">
+				<h4>Property setting</h4>
+				<div class="umb-property">
+					<div class="control-group umb-control-group">
+						<umb-control-group label="Data type" description="">
+							<select ng-options="datatype.guid as datatype.name for datatype in availableDataTypes" ng-model="model.value.dataType" required></select>
+						</umb-control-group>
+						<umb-control-group label="Name" description="">
+							<input class="umb-property-editor umb-textstring" type="text" ng-model="model.value.name" required />
+						</umb-control-group>
+						<umb-control-group label="Alias" description="">
+							<input class="umb-property-editor umb-textstring" type="text" ng-model="model.value.alias" required />
+						</umb-control-group>
+						<umb-control-group label="Description" description="">
+							<textarea class="umb-property-editor umb-textstring" style="height: 100px;" ng-model="model.value.description" />
+						</umb-control-group>
+						<div ng-show="isCustom()">
+							<umb-control-group label="View" description="">
+								<input class="umb-property-editor umb-textstring" type="text" ng-model="model.value.propretyType.view" />
+							</umb-control-group>
+						</div>
+						<div ng-show="isCustom()">
+							<umb-control-group label="Config" description="">
+								<textarea class="umb-property-editor umb-textstring" style="height: 100px;" ng-model="textAreaconfig" />
+							</umb-control-group>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
-                <h4>Property setting</h4>
+		<umb-editor-footer>
+			<umb-editor-footer-content-right>
+				<umb-button type="button"
+							button-style="link"
+							label-key="general_close"
+							shortcut="esc"
+							action="close()">
+				</umb-button>
+				<umb-button alias="submit"
+							type="button"
+							button-style="success"
+							label-key="general_submit"
+							state="vm.saveButtonState"
+							action="save()">
+				</umb-button>
+			</umb-editor-footer-content-right>
+		</umb-editor-footer>
 
-                <div class="umb-property">
-                    <div class="control-group umb-control-group">
-
-                        <umb-control-group label="Data type" description="">
-                            <select ng-options="datatype.guid as datatype.name for datatype in availableDataTypes" ng-model="model.value.dataType" required></select>
-                        </umb-control-group>
-
-                        <umb-control-group label="Name" description="">
-                            <input class="umb-editor umb-textstring" type="text" ng-model="model.value.name" required />
-                        </umb-control-group>
-
-                        <umb-control-group label="Alias" description="">
-                            <input class="umb-editor umb-textstring" type="text" ng-model="model.value.alias" required />
-                        </umb-control-group>
-
-                        <umb-control-group label="Description" description="">
-                            <textarea class="umb-editor umb-textstring" style="height: 100px;" ng-model="model.value.description" />
-                        </umb-control-group>
-
-                        <div ng-show="isCustom()">
-                            <umb-control-group label="View" description="">
-                                <input class="umb-editor umb-textstring" type="text" ng-model="model.value.propretyType.view" />
-                            </umb-control-group>
-                        </div>
-
-                        <div ng-show="isCustom()">
-                            <umb-control-group label="Config" description="">
-                                <textarea class="umb-editor umb-textstring" style="height: 100px;" ng-model="textAreaconfig" />
-                            </umb-control-group>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="umb-panel-footer">
-            <div class="umb-el-wrap umb-panel-buttons">
-                <div class="btn-toolbar umb-btn-toolbar pull-right">
-                    <a ng-click="close()" class="btn btn-link">
-                        <localize key="general_cancel">Cancel</localize>
-                    </a>
-                    <button type="submit" data-hotkey="ctrl+s" class="btn btn-success">
-                        <localize key="buttons_save">Save</localize>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
+		<!--div class="umb-panel-footer">
+		<div class="umb-el-wrap umb-panel-buttons">
+			<div class="btn-toolbar umb-btn-toolbar pull-right">
+				<a ng-click="close()" class="btn btn-link">
+					<localize key="general_cancel">Cancel</localize>
+				</a>
+				<button type="submit" data-hotkey="ctrl+s" class="btn btn-success">
+					<localize key="buttons_save">Save</localize>
+				</button>
+			</div>
+		</div>
+	</!--div-->
+	</div>
 </form>
