--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
@@ -4,10 +4,17 @@
       val-form-manager>
 
 	<div class="umb-panel">
-		<div class="umb-panel-body no-header with-footer">
-			<div class="umb-forms-settings">
-				<h4>Property setting</h4>
-				<div class="umb-property">
+
+		<umb-editor-header name="name"
+						   name-locked="true"
+						   hide-icon="true"
+						   hide-alias="true"
+						   hide-description="true">
+		</umb-editor-header>
+
+		<div class="umb-editor-container umb-panel-body umb-scrollable">
+			<div class="umb-pane">
+				<div class="umb-box">
 					<div class="control-group umb-control-group">
 						<umb-control-group label="Data type" description="">
 							<select ng-options="datatype.guid as datatype.name for datatype in availableDataTypes" ng-model="model.value.dataType" required></select>
