--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/leblendereditor.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/leblendereditor.html
@@ -1,6 +1,6 @@
 <div class="list-editor list-editor-{{control.editor.alias}}" ng-click="openListParameter()" ng-controller="LeBlenderEditor.controller">
 
-    <div ng-if="preview" ng-bind-html-unsafe="preview"></div>
+    <div ng-if="preview" ng-bind-html="allowedPreview"></div>
 
     <div class="usky-editor-placeholder preview-LeBlender" ng-hide="preview">
         <i class="icon {{control.editor.icon}}"></i>
