--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
@@ -5,11 +5,12 @@
 
     <umb-editor-view>
 
-        <umb-editor-header name="name"
-                           name-locked="true"
-                           hide-icon="true"
-                           hide-alias="true"
-                           hide-description="true">
+        <umb-editor-header
+            name="name"
+            name-locked="true"
+            hide-icon="true"
+            hide-alias="true"
+            hide-description="true">
         </umb-editor-header>
 
         <umb-editor-container class="form-horizontal">
