--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/backoffice/GridEditorManager/edit.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/backoffice/GridEditorManager/edit.html
@@ -4,7 +4,7 @@
 
     <form name="editormanagerForm"
 	      ng-show="loaded"
-	      ng-submit="save()"
+	      ng-submit="vm.save()"
 	      val-form-manager>
 
         <umb-editor-view ng-if="!vm.page.loading">
