--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/leblendereditor.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/leblendereditor.html
@@ -1,4 +1,4 @@
-<div class="list-editor list-editor-{{control.editor.alias}}" ng-click="openListParameter()" ng-controller="LeBlenderEditor.controller">
+<div class="list-editor list-editor-{{control.editor.alias}}" ng-click="openListParameter()" ng-controller="LeBlenderEditor.controller as vm">
 
     <div ng-if="preview" ng-bind-html="allowedPreview"></div>
 
