Update remove function

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/leblenderproperties.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/leblenderproperties.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="umb-prevalues-multivalues__right">
                     <a class="umb-node-preview__action" ng-click="vm.openPropertyConfig(property)"><localize key="general_edit" class="ng-isolate-scope">Edit</localize></a>
-                    <a class="umb-node-preview__action umb-node-preview__action--red" ng-click="remove($index)"><localize key="general_remove">Remove</localize></a>
+                    <a class="umb-node-preview__action umb-node-preview__action--red" ng-click="vm.remove($index)"><localize key="general_remove">Remove</localize></a>
                 </div>
             </div>
         </div>
