--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
@@ -1,70 +1,72 @@
-<form name="editoreditorForm"
-      ng-controller="LeBlender.Dialog.ParameterConfig.Prevalues.Controller as vm"
-      novalidate 
-      val-form-manager>
+<div ng-controller="LeBlender.Dialog.ParameterConfig.Prevalues.Controller as vm">
 
-    <umb-editor-view>
+    <form name="editoreditorForm"
+          novalidate
+          val-form-manager>
 
-        <umb-editor-header
-            name="name"
-            name-locked="true"
-            hide-icon="true"
-            hide-alias="true"
-            hide-description="true">
-        </umb-editor-header>
+        <umb-editor-view>
 
-        <umb-editor-container class="form-horizontal">
+            <umb-editor-header name="name"
+                               name-locked="true"
+                               hide-icon="true"
+                               hide-alias="true"
+                               hide-description="true">
+            </umb-editor-header>
 
-            <umb-box>
-                <umb-box-content>
+            <umb-editor-container class="form-horizontal">
 
-                    <div class="control-group umb-control-group">
-                        <umb-control-group label="Data type" description="">
-                            <select ng-options="datatype.guid as datatype.name for datatype in availableDataTypes" ng-model="model.value.dataType" required></select>
-                        </umb-control-group>
-                        <umb-control-group label="Name" description="">
-                            <input class="umb-property-editor umb-textstring" type="text" ng-model="model.value.name" required />
-                        </umb-control-group>
-                        <umb-control-group label="Alias" description="">
-                            <input class="umb-property-editor umb-textstring" type="text" ng-model="model.value.alias" required />
-                        </umb-control-group>
-                        <umb-control-group label="Description" description="">
-                            <textarea class="umb-property-editor umb-textstring" style="height: 100px;" ng-model="model.value.description" />
-                        </umb-control-group>
-                        <div ng-show="isCustom()">
-                            <umb-control-group label="View" description="">
-                                <input class="umb-property-editor umb-textstring" type="text" ng-model="model.value.propretyType.view" />
+                <umb-box>
+                    <umb-box-content>
+
+                        <div class="control-group umb-control-group">
+                            <umb-control-group label="Data type" description="">
+                                <select ng-options="datatype.guid as datatype.name for datatype in availableDataTypes" ng-model="model.value.dataType" required></select>
                             </umb-control-group>
-                        </div>
-                        <div ng-show="isCustom()">
-                            <umb-control-group label="Config" description="">
-                                <textarea class="umb-property-editor umb-textstring" style="height: 100px;" ng-model="textAreaconfig" />
+                            <umb-control-group label="Name" description="">
+                                <input class="umb-property-editor umb-textstring" type="text" ng-model="model.value.name" required />
                             </umb-control-group>
+                            <umb-control-group label="Alias" description="">
+                                <input class="umb-property-editor umb-textstring" type="text" ng-model="model.value.alias" required />
+                            </umb-control-group>
+                            <umb-control-group label="Description" description="">
+                                <textarea class="umb-property-editor umb-textstring" style="height: 100px;" ng-model="model.value.description" />
+                            </umb-control-group>
+                            <div ng-show="isCustom()">
+                                <umb-control-group label="View" description="">
+                                    <input class="umb-property-editor umb-textstring" type="text" ng-model="model.value.propretyType.view" />
+                                </umb-control-group>
+                            </div>
+                            <div ng-show="isCustom()">
+                                <umb-control-group label="Config" description="">
+                                    <textarea class="umb-property-editor umb-textstring" style="height: 100px;" ng-model="textAreaconfig" />
+                                </umb-control-group>
+                            </div>
                         </div>
-                    </div>
 
-                </umb-box-content>
-            </umb-box>            
+                    </umb-box-content>
+                </umb-box>
 
-        </umb-editor-container>
+            </umb-editor-container>
 
-        <umb-editor-footer>
-            <umb-editor-footer-content-right>
-                <umb-button type="button"
-                            button-style="link"
-                            label-key="general_close"
-                            shortcut="esc"
-                            action="vm.close()">
-                </umb-button>
-                <umb-button alias="submit"
-                            type="button"
-                            button-style="success"
-                            label-key="general_submit"
-                            state="vm.saveButtonState"
-                            action="vm.submit(model)">
-                </umb-button>
-            </umb-editor-footer-content-right>
-        </umb-editor-footer>
+            <umb-editor-footer>
+                <umb-editor-footer-content-right>
+                    <umb-button type="button"
+                                button-style="link"
+                                label-key="general_close"
+                                shortcut="esc"
+                                action="vm.close()">
+                    </umb-button>
+                    <umb-button type="button"
+                                button-style="success"
+                                label-key="general_submit"
+                                state="vm.saveButtonState"
+                                action="vm.submit(model)">
+                    </umb-button>
+                </umb-editor-footer-content-right>
+            </umb-editor-footer>
 
-    </umb-editor-view>
-</form>
+        </umb-editor-view>
+
+    </form>
+
+</div>
