--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
@@ -17,12 +17,12 @@
                 <umb-box-content>
 
                     <div ng-if="configLoaded" ui-sortable="sortableOptions" ng-model="model.value">
-                        <div class="list list-field" ng-class="{'list-open':selected === item, 'multiple':!(fixed && config.min == 1)}" ng-click="select(item)" ng-repeat="item in model.value track by $index">
+                        <div class="list list-field" ng-class="{'list-open':selected === item, 'multiple':!(fixed && config.min == 1)}" ng-click="vm.select(item)" ng-repeat="item in model.value track by $index">
 
                             <span ng-show="!(fixed && config.min == 1)" class="list-number">
                                 {{$index + 1}}
                                 <i ng-show="model.value.length > 1" class="icon right icon-navigation"></i>
-                                <i ng-show="!fixed && model.value.length > config.min" ng-click=" remove(item, $index);$event.stopPropagation()" class="icon right icon-delete"></i>
+                                <i ng-show="!fixed && model.value.length > config.min" ng-click="vm.remove(item, $index);$event.stopPropagation()" class="icon right icon-delete"></i>
                             </span>
                             <umb-control-group label="{{property.$editor.name}}" description="{{property.$editor.description}}"
                                                 ng-repeat="property in item | LeBlenderOrderObjectBy:'$order':false">
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div ng-show="!fixed && config.max > model.value.length" class="list-add-row">
-                        <i ng-click="add()" class="icon right icon-add"></i>
+                        <i ng-click="vm.add()" class="icon right icon-add"></i>
                     </div>
 
                 </umb-box-content>
@@ -47,12 +47,11 @@
 							shortcut="esc"
 							action="vm.close()">
 				</umb-button>
-				<umb-button alias="submit"
-							type="button"
-							    button-style="success"
-							    label-key="general_submit"
-							    state="vm.saveButtonState"
-							    action="vm.save()">
+				<umb-button type="button"
+							button-style="success"
+							label-key="general_submit"
+							state="vm.saveButtonState"
+							action="vm.save()">
 				    </umb-button>
 			    </umb-editor-footer-content-right>
 		    </umb-editor-footer>
