Update function name

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
@@ -51,7 +51,7 @@
 							button-style="success"
 							label-key="general_submit"
 							state="vm.saveButtonState"
-							action="vm.save()">
+							action="vm.submit()">
 				    </umb-button>
 			    </umb-editor-footer-content-right>
 		    </umb-editor-footer>
