--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
@@ -51,10 +51,10 @@
 							button-style="success"
 							label-key="general_submit"
 							state="vm.saveButtonState"
-							action="vm.submit()">
+							action="vm.submit(model)">
 				    </umb-button>
-			    </umb-editor-footer-content-right>
-		    </umb-editor-footer>
+			</umb-editor-footer-content-right>
+		</umb-editor-footer>
 
-        </umb-editor-view>
-	</div>
+    </umb-editor-view>
+</div>
