Add property sortable options

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/backoffice/GridEditorManager/edit.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/backoffice/GridEditorManager/edit.html
@@ -50,7 +50,8 @@
                                                ng-repeat="field in selectedPropertyGridEditor.prevalues.fields">
                                 <propertygrideditorwrapper value="model.value"
                                                            key="field.key"
-                                                           view="getFieldView(field.view)"></propertygrideditorwrapper>
+                                                           view="getFieldView(field.view)">
+                                </propertygrideditorwrapper>
                             </umb-control-group>
                         </div>
 
