--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/leblenderproperties.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/leblenderproperties.html
@@ -2,7 +2,7 @@
 
     <div class="umb-property-editor umb-prevalues-multivalues">
 
-        <div ui-sortable ng-model="model.value">
+        <div ui-sortable="sortableOptions" ng-model="model.value">
             <div class="control-group umb-prevalues-multivalues__listitem" ng-repeat="property in model.value track by $index">
                 <i class="icon icon-navigation handle"></i>
                 <div class="umb-prevalues-multivalues__left">
