--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
@@ -13,29 +13,44 @@
 
         <umb-editor-container class="form-horizontal" id="blender-grid-editor-parameter">
 
-            <umb-box>
-                <umb-box-content>
+            <div ng-if="configLoaded" ui-sortable="sortableOptions" ng-model="model.value">
 
-                    <div ng-if="configLoaded" ui-sortable="sortableOptions" ng-model="model.value">
-                        <div class="list list-field" ng-class="{'list-open':selected === item, 'multiple':!(fixed && config.min == 1)}" ng-click="vm.select(item)" ng-repeat="item in model.value track by $index">
+                <div class="umb-expansion-panel" ng-class="{'multiple':!(fixed && config.min == 1)}" ng-repeat="item in model.value track by $index">
 
+                    <div class="umb-expansion-panel__header" ng-show="!(fixed && config.min == 1)" ng-click="vm.select(item, $index)">
+                        <div class="flex-auto">
                             <span ng-show="!(fixed && config.min == 1)" class="list-number">
                                 {{$index + 1}}
-                                <i ng-show="model.value.length > 1" class="icon right icon-navigation"></i>
-                                <i ng-show="!fixed && model.value.length > config.min" ng-click="vm.remove(item, $index);$event.stopPropagation()" class="icon right icon-delete"></i>
                             </span>
+                        </div>
+                        <i ng-show="model.value.length > 1" class="icon icon-navigation handle" style="margin-right: 5px;"></i>
+                        <i ng-show="!fixed && model.value.length > config.min" ng-click="vm.showPrompt(item); $event.stopPropagation();" class="icon icon-delete" style="margin-right: 5px;"></i>
+                        <ins class="umb-expansion-panel__expand" ng-show="!fixed && config.max > model.value.length" ng-class="{'icon-navigation-down': !item.propertiesOpen, 'icon-navigation-up': item.propertiesOpen}">&nbsp;</ins>
+                        
+                        <umb-confirm-action ng-if="item.deletePrompt"
+                                            on-confirm="vm.remove(item)"
+                                            on-cancel="vm.hidePrompt(item)">
+                        </umb-confirm-action>
+                    </div>
+
+                    <div class="umb-expansion-panel__content" ng-show="item.propertiesOpen || (fixed && config.min == 1)">
+
+                        <div>
                             <umb-control-group label="{{property.$editor.name}}" description="{{property.$editor.description}}"
-                                                ng-repeat="property in item | LeBlenderOrderObjectBy:'$order':false">
+                                               ng-repeat="property in item | LeBlenderOrderObjectBy:'$order':false">
                                 <blender-editor-wrapper property="property" item="item"></blender-editor-wrapper>
                             </umb-control-group>
                         </div>
-                    </div>
-                    <div ng-show="!fixed && config.max > model.value.length" class="list-add-row">
-                        <i ng-click="vm.add()" class="icon right icon-add"></i>
+
                     </div>
 
-                </umb-box-content>
-            </umb-box>
+                </div>
+
+            </div>
+
+            <div ng-show="!fixed && config.max > model.value.length" ng-click="vm.add()" class="list-add-row">
+                <localize key="grid_addElement">Add element</localize>
+            </div>
 
         </umb-editor-container>
 
