--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/backoffice/GridEditorManager/edit.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/backoffice/GridEditorManager/edit.html
@@ -46,7 +46,7 @@
 
                         <div ng-show="isCustom()">
                             <umb-control-group label="Config" description="Optional custom editor config">
-                                <textarea style="min-width: 66.6%; height: 100px;" type="text" ng-change="configChanged(textAreaconfig)" ng-model="textAreaconfig" />
+                                <textarea style="min-width: 66.6%; height: 100px;" type="text" ng-change="configChanged(textAreaconfig)" ng-model="textAreaconfig"></textarea>
                             </umb-control-group>
                         </div>
 
